# otterwiki-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
otterwiki_api/: __init__.py  auth.py  frontmatter.py  routes.py  search.py  wikilinks.py
tests/: conftest.py  test_api.py
